# field-analysis-lib

./: .gitignore  README.md
NMR-Flay/: Makefile
NMR-Flay/include/: NMRFourierTransform.h  NMRMath.h
NMR-Flay/src/: NMRFourierTransform.cpp  NMRMath.cpp
art-modules/producers/: CMakeLists.txt  TrolleyUnpacker_module.cc
examples/: CMakeLists.txt  dependency_list
examples/gm2dataproducts/: CMakeLists.txt
examples/gm2dataproducts/aux/: CMakeLists.txt  FredinoArtRecord.hh  classes.h  classes_def.xml
examples/gm2dataproducts/calo/: ClusterArtRecord.hh  CrystalHitArtRecord.hh  DAQHeader.hh  DeciQHistArtRecord.hh  FitResultArtRecord.hh  IslandArtRecord.hh  ItalianoArtRecord.hh  QHistArtRecord.hh  RiderArtRecord.hh  classes.h  classes_def.xml
examples/gm2dataproducts/daq/: CMakeLists.txt  MidasODBArtRecord.hh  classes_def.xml
examples/gm2dataproducts/strawtracker/: Circle.hh  DecayVertexArtRecord.hh  Helix.hh  Line.hh  StrawClusterArtRecord.hh  StrawDigitArtRecord.hh  StrawRawDigitArtRecord.hh  StrawSeedArtRecord.hh  StrawTimeIslandArtRecord.hh  TrackArtRecord.hh  TrackCandidateArtRecord.hh  TrackParamDefs.hh  TrackStateArtRecord.hh  classes.h  classes_def.xml
examples/gm2dataproducts/ups/: product_deps
examples/gm2midastoart/: CMakeLists.txt
examples/gm2midastoart/calo/: CMakeLists.txt  ReadBankExampleMFE_module.cc  ReadBankExampleQ_module.cc  ReadBankExampleTGraph_module.cc  ReadBankExampleT_module.cc  ReadBankExampleraw_module.cc  calorimeter.h  calorimeter_defna.h  defna.h  readTBank.fcl
examples/gm2midastoart/example/: .PrintBankExample_module.cc.swp  CMakeLists.txt  PrintBankExample_module.cc  exampleParseMidasFile.fcl  exampleParseMidasFile.root  examplePrintBank.fcl  run00176.mid  run02540.mid
examples/gm2midastoart/fcl/: midasInputOffline.fcl  midasInputOnline.fcl
examples/gm2midastoart/sources/: CMakeLists.txt  MidasBankInput_source.cc
examples/gm2midastoart/ups/: product_deps
examples/myTestModules/: CMakeLists.txt
examples/myTestModules/myExampleFcl/: myExampleFcl.fcl
examples/myTestModules/myTestAnalyzer/: .myTestAnalyzer_module.cc.swp  CMakeLists.txt  myTestAnalyzer_module.cc
examples/myTestModules/myTestDataProduct/: .myTestDataProduct.hh.swp  classes.h  classes_def.xml  myTestDataProduct.hh
examples/myTestModules/myTestFilter/: .dropOnOutput.fcl.swp  CMakeLists.txt  myTestFilter_module.cc
examples/myTestModules/myTestProducer/: myTestProducer_module.cc
examples/myTestModules/ups/: product_deps
gm2dataproducts/: CMakeLists.txt
gm2dataproducts/daq/: .MidasEventArtRecord.hh.swp  GPSArtRecord.hh  MidasEventArtRecord.hh  MidasEventHeaderArtRecord.hh  TriggerArtRecord.hh  classes.h
gm2dataproducts/field/: GalilArtRecord.hh  TrolleyArtRecord.hh  classes.h  classes_def.xml
